# SE4AI2021Course_FastAPI-demo

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  locustfile.py  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: QA.yml  api_test.yml  example.yml  model_training.yml
app/: api.py  api_test.py  monitoring.py  schemas.py  test_api.py
dashboards/: Grafana Dashboard-1639093436890.json  Grafana Dashboard-1702316816635.json
grafana/provisioning/dashboards/: 11DecTrial-1733958487966.json
locust/: Dockerfile
models/: LogisticRegression_model.pkl  Pickle_RL_Model.pkl  SVC_model.pkl
notebooks/: drift-detection with alibi detect.ipynb  drift-detection with deepchecks.ipynb  drift-detection.ipynb
scripts/: data_validation.py  fake-production-data.py  train.py
