[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Used to demonstrate FastAPI and other MLOps tools in the SE4AI course"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "prometheus-client>=0.21.1",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "scikit-learn>=1.6.0",
]
